package main

import (
	"context"
	"log"
	"time"

	"github.com/brianvoe/gofakeit/v7"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
	"google.golang.org/protobuf/types/known/timestamppb"
	"google.golang.org/protobuf/types/known/wrapperspb"

	ufoV1 "github.com/yyunoshev/yyunoshev_go/week_1/grpc/pkg/proto/ufo/v1"
)

const serverAddress = "localhost:50051"

// createSighting —Å–æ–∑–¥–∞–µ—Ç –Ω–æ–≤–æ–µ –Ω–∞–±–ª—é–¥–µ–Ω–∏–µ –ù–õ–û —Å —Ä–∞–Ω–¥–æ–º–Ω—ã–º–∏ –¥–∞–Ω–Ω—ã–º–∏
func createSighting(ctx context.Context, client ufoV1.UFOServiceClient) (string, error) {
	// –ì–µ–Ω–µ—Ä–∏—Ä—É–µ–º —Å–ª—É—á–∞–π–Ω—ã–µ –¥–∞–Ω–Ω—ã–µ —Å –ø–æ–º–æ—â—å—é gofakeit
	observedAt := gofakeit.DateRange(
		time.Now().AddDate(-3, 0, 0), // –∑–∞ –ø–æ—Å–ª–µ–¥–Ω–∏–µ 3 –≥–æ–¥–∞
		time.Now(),
	)
	location := gofakeit.City() + ", " + gofakeit.StreetName()
	description := gofakeit.Sentence(gofakeit.Number(5, 15))

	// –°–æ–∑–¥–∞–µ–º –±–∞–∑–æ–≤—É—é –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –Ω–∞–±–ª—é–¥–µ–Ω–∏–∏
	info := &ufoV1.SightingInfo{
		ObservedAt:  timestamppb.New(observedAt),
		Location:    location,
		Description: description,
	}

	// –ò–Ω–æ–≥–¥–∞ –¥–æ–±–∞–≤–ª—è–µ–º –¥–æ–ø–æ–ª–Ω–∏—Ç–µ–ª—å–Ω—ã–µ –ø–æ–ª—è (—Å –≤–µ—Ä–æ—è—Ç–Ω–æ—Å—Ç—å—é 70%)
	if gofakeit.Bool() {
		info.Color = wrapperspb.String(gofakeit.Color())
	}

	if gofakeit.Bool() {
		info.Sound = wrapperspb.String(gofakeit.Word())
	}

	if gofakeit.Bool() {
		info.DurationSeconds = wrapperspb.Int32(gofakeit.Int32())
	}

	// –í—ã–∑—ã–≤–∞–µ–º gRPC –º–µ—Ç–æ–¥ Create
	resp, err := client.Create(ctx, &ufoV1.CreateRequest{Info: info})
	if err != nil {
		return "", err
	}

	return resp.Uuid, nil
}

// getSighting –ø–æ–ª—É—á–∞–µ—Ç –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –Ω–∞–±–ª—é–¥–µ–Ω–∏–∏ –ø–æ UUID
func getSighting(ctx context.Context, client ufoV1.UFOServiceClient, uuid string) (*ufoV1.Sighting, error) {
	resp, err := client.Get(ctx, &ufoV1.GetRequest{Uuid: uuid})
	if err != nil {
		return nil, err
	}

	return resp.Sighting, nil
}

// updateSighting –æ–±–Ω–æ–≤–ª—è–µ—Ç –Ω–∞–±–ª—é–¥–µ–Ω–∏–µ –ù–õ–û
func updateSighting(ctx context.Context, client ufoV1.UFOServiceClient, uuid string) error {
	// –ì–µ–Ω–µ—Ä–∏—Ä—É–µ–º —Ä–∞–Ω–¥–æ–º–Ω—ã–µ –¥–∞–Ω–Ω—ã–µ –¥–ª—è –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è
	updateInfo := &ufoV1.SightingUpdateInfo{}

	// –û–±–Ω–æ–≤–ª—è–µ–º —á–∞—Å—Ç—å –ø–æ–ª–µ–π —Å–ª—É—á–∞–π–Ω—ã–º –æ–±—Ä–∞–∑–æ–º
	if gofakeit.Bool() {
		updateInfo.ObservedAt = timestamppb.New(gofakeit.DateRange(
			time.Now().AddDate(-3, 0, 0),
			time.Now(),
		))
	}

	if gofakeit.Bool() {
		location := gofakeit.City() + ", " + gofakeit.StreetName()
		updateInfo.Location = wrapperspb.String(location)
	}

	if gofakeit.Bool() {
		description := gofakeit.Sentence(gofakeit.Number(5, 15))
		updateInfo.Description = wrapperspb.String(description)
	}

	if gofakeit.Bool() {
		updateInfo.Color = wrapperspb.String(gofakeit.Color())
	}

	if gofakeit.Bool() {
		updateInfo.Sound = wrapperspb.String(gofakeit.Word())
	}

	if gofakeit.Bool() {
		updateInfo.DurationSeconds = wrapperspb.Int32(gofakeit.Int32())
	}

	// –í—ã–∑—ã–≤–∞–µ–º gRPC –º–µ—Ç–æ–¥ Update
	_, err := client.Update(ctx, &ufoV1.UpdateRequest{
		Uuid:       uuid,
		UpdateInfo: updateInfo,
	})
	if err != nil {
		return err
	}

	return nil
}

// deleteSighting —É–¥–∞–ª—è–µ—Ç –Ω–∞–±–ª—é–¥–µ–Ω–∏–µ –ù–õ–û
func deleteSighting(ctx context.Context, client ufoV1.UFOServiceClient, uuid string) error {
	_, err := client.Delete(ctx, &ufoV1.DeleteRequest{Uuid: uuid})
	if err != nil {
		return err
	}

	return nil
}

func main() {
	ctx := context.Background()

	conn, err := grpc.NewClient(
		serverAddress,
		grpc.WithTransportCredentials(insecure.NewCredentials()),
	)
	if err != nil {
		log.Printf("failed to connect: %v\n", err)
		return
	}
	defer func() {
		if cerr := conn.Close(); cerr != nil {
			log.Printf("failed to close connect: %v", cerr)
		}
	}()

	// –°–æ–∑–¥–∞–µ–º gRPC –∫–ª–∏–µ–Ω—Ç
	client := ufoV1.NewUFOServiceClient(conn)

	log.Println("=== –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ API –¥–ª—è —Ä–∞–±–æ—Ç—ã —Å –Ω–∞–±–ª—é–¥–µ–Ω–∏—è–º–∏ –ù–õ–û ===")
	log.Println()

	// 1. –°–æ–∑–¥–∞–µ–º –Ω–µ—Å–∫–æ–ª—å–∫–æ –Ω–∞–±–ª—é–¥–µ–Ω–∏–π
	log.Println("üõ∏ –°–æ–∑–¥–∞–Ω–∏–µ –Ω–∞–±–ª—é–¥–µ–Ω–∏–π –ù–õ–û")
	log.Println("===========================")
	uuid, err := createSighting(ctx, client)
	if err != nil {
		log.Printf("–û—à–∏–±–∫–∞ –ø—Ä–∏ —Å–æ–∑–¥–∞–Ω–∏–∏ –Ω–∞–±–ª—é–¥–µ–Ω–∏—è: %v\n", err)
		return
	}

	// –í—ã–≤–æ–¥–∏–º –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ —Å–æ–∑–¥–∞–Ω–Ω–æ–º –Ω–∞–±–ª—é–¥–µ–Ω–∏–∏
	log.Printf("–°–æ–∑–¥–∞–Ω–æ –Ω–∞–±–ª—é–¥–µ–Ω–∏–µ –ù–õ–û: UUID=%s\n", uuid)

	// 2. –ü–æ–ª—É—á–∞–µ–º –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –Ω–∞–±–ª—é–¥–µ–Ω–∏–∏
	log.Println("üîç –ü–æ–ª—É—á–µ–Ω–∏–µ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ –Ω–∞–±–ª—é–¥–µ–Ω–∏–∏")
	log.Println("==================================")
	sighting, err := getSighting(ctx, client, uuid)
	if err != nil {
		log.Printf("–û—à–∏–±–∫–∞ –ø—Ä–∏ –ø–æ–ª—É—á–µ–Ω–∏–∏ –Ω–∞–±–ª—é–¥–µ–Ω–∏—è: %v\n", err)
		return
	}

	// –í—ã–≤–æ–¥–∏–º –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –ø–æ–ª—É—á–µ–Ω–Ω–æ–º –Ω–∞–±–ª—é–¥–µ–Ω–∏–∏
	log.Printf("–ü–æ–ª—É—á–µ–Ω–æ –Ω–∞–±–ª—é–¥–µ–Ω–∏–µ –ù–õ–û: UUID=%s", uuid)
	log.Printf("%v\n", sighting)

	// 3. –û–±–Ω–æ–≤–ª—è–µ–º –Ω–∞–±–ª—é–¥–µ–Ω–∏–µ
	log.Println("‚úèÔ∏è –û–±–Ω–æ–≤–ª–µ–Ω–∏–µ –Ω–∞–±–ª—é–¥–µ–Ω–∏–µ")
	log.Println("=======================")

	err = updateSighting(ctx, client, uuid)
	if err != nil {
		log.Printf("–û—à–∏–±–∫–∞ –ø—Ä–∏ –æ–±–Ω–æ–≤–ª–µ–Ω–∏–∏ –Ω–∞–±–ª—é–¥–µ–Ω–∏—è: %v", err)
		return
	}

	// 4. –ü—Ä–æ–≤–µ—Ä—è–µ–º –æ–±–Ω–æ–≤–ª–µ–Ω–Ω–æ–µ –Ω–∞–±–ª—é–¥–µ–Ω–∏–µ
	log.Println("üîç –ü—Ä–æ–≤–µ—Ä–∫–∞ –æ–±–Ω–æ–≤–ª–µ–Ω–Ω–æ–≥–æ –Ω–∞–±–ª—é–¥–µ–Ω–∏—è")
	log.Println("=================================")
	updatedSighting, err := getSighting(ctx, client, uuid)
	if err != nil {
		log.Printf("–û—à–∏–±–∫–∞ –ø—Ä–∏ –ø–æ–ª—É—á–µ–Ω–∏–∏ –æ–±–Ω–æ–≤–ª–µ–Ω–Ω–æ–≥–æ –Ω–∞–±–ª—é–¥–µ–Ω–∏—è: %v", err)
		return
	}

	// –í—ã–≤–æ–¥–∏–º –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ–± –æ–±–Ω–æ–≤–ª–µ–Ω–Ω–æ–º –Ω–∞–±–ª—é–¥–µ–Ω–∏–∏
	log.Printf("–ü–æ–ª—É—á–µ–Ω–æ –Ω–∞–±–ª—é–¥–µ–Ω–∏–µ –ù–õ–û: UUID=%s", uuid)
	log.Printf("%v\n", updatedSighting)

	// 6. –£–¥–∞–ª—è–µ–º –Ω–∞–±–ª—é–¥–µ–Ω–∏–µ
	err = deleteSighting(ctx, client, uuid)
	if err != nil {
		log.Printf("–û—à–∏–±–∫–∞ –ø—Ä–∏ —É–¥–∞–ª–µ–Ω–∏–∏ –Ω–∞–±–ª—é–¥–µ–Ω–∏—è: %v", err)
	}

	// 7. –ü—Ä–æ–≤–µ—Ä—è–µ–º —É–¥–∞–ª–µ–Ω–Ω–æ–µ –Ω–∞–±–ª—é–¥–µ–Ω–∏–µ
	log.Println("üîç –ü—Ä–æ–≤–µ—Ä–∫–∞ —É–¥–∞–ª–µ–Ω–Ω–æ–≥–æ –Ω–∞–±–ª—é–¥–µ–Ω–∏—è")
	log.Println("=================================")
	deletedSighting, err := getSighting(ctx, client, uuid)
	if err != nil {
		log.Printf("–û—à–∏–±–∫–∞ –ø—Ä–∏ –ø–æ–ª—É—á–µ–Ω–∏–∏ —É–¥–∞–ª–µ–Ω–Ω–æ–≥–æ –Ω–∞–±–ª—é–¥–µ–Ω–∏—è: %v", err)
		return
	}

	// –í—ã–≤–æ–¥–∏–º –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ–± —É–¥–∞–ª–µ–Ω–Ω–æ–º –Ω–∞–±–ª—é–¥–µ–Ω–∏–∏
	log.Printf("–ü–æ–ª—É—á–µ–Ω–æ —É–¥–∞–ª–µ–Ω–Ω–æ–µ –Ω–∞–±–ª—é–¥–µ–Ω–∏–µ –ù–õ–û: UUID=%s", uuid)
	log.Printf("%v\n", deletedSighting)

	log.Println("–¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –∑–∞–≤–µ—Ä—à–µ–Ω–æ!")
}
